# smith-waterman

./: README.md  pyproject.toml
src/: hw1.py
src/smith_waterman_intermezzo672.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
