[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smith_waterman_intermezzo672"
version = "0.0.1"
authors = [
  { name="Kelly Chen", email="kelly.chen@yale.edu" },
]
description = "Implementation of the Smith-Waterman algorithm for MCDB452"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]